# NEPTUNE-BOT

./: ar_or_en.py  dic.py  main.py  pyproject.toml  translate.py
