[tool.poetry]
name = "jsawafta-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
deep-translator = "^1.3.2"
replit = "^2.0.0"
flask = "^1.1.2"
pencil = "^0.7"
youtube-dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
